<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="admin_login">Admin Login</string>
    <string name="logout">LogOut</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">Or</string>
    <string name="ucp_society_portal">UCP SOCIETY PORTAL</string>
    <string name="have_nt_an_account">Have\'nt an account?</string>
    <string name="adminlogin">AdminLogin</string>
    <string name="department">Department</string>
    <string name="semester">Semester</string>
    <string name="contact">Contact#</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="admin_user">Admin/User</string>
    <string name="welcome">Welcome</string>
    <string name="button">Button</string>
    <string name="takhleeq">Takhleeq</string>
    <string name="plektra">Plektra</string>
    <string name="ieee">IEEE</string>
    <string name="catalyst">Catalyst</string>
    <string name="blood_donor">Blood Donor</string>
    <string name="title_activity_plektra">Plektra</string>
    <string name="its_ucp_society">its_ucp_society</string>
    <string name="blood_donor_s_society">blood_donor_s_society</string>
</resources>
